@@ -224,6 +224,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 7071) Properly handle an 'oldid' passed to view or edit that doesn't
   match the given title. Fixes inconsistencies with talk, history, edit links.
 * (bug 10397) Fix AJAX watch error fallback when we receive a bogus result
+* (bug 10396) Fix AJAX error when $wgScriptPath/index.php is not valid;
+  using $wgScript now included in JS info
 
 
 == API changes since 1.10 ==
